@@ -14,9 +14,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
+
     buildTypes {
         debug {
             minifyEnabled project.minifyDebug
@@ -27,11 +28,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 }
 
 dependencies {
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    testImplementation 'junit:junit:4.12'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.appcompatV7
@@ -39,4 +45,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.8.9'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
